--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Test Git Tool</title>
 </head>
 <body>
-<h1>Changed the header</h1>
+<h1>Changed the header - v1.0</h1>
 </body>
 </html>
